# ai-agents

./: .gitignore  README.md
01-llm-api/: .gitignore  README.md
01-llm-api/src/: bot.py
02-aidd/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
02-aidd/docs/: idea-consultant-api.md  idea.md  tasklist.md  vision.md
02-aidd/prompts/: system_prompt.txt
03-multimodal/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
03-multimodal/.cursor/rules/: conventions.mdc
03-multimodal/docs/: idea.md  tasklist.md  vision.md
03-multimodal/docs/prompts/: vm-setup-speech.md
03-multimodal/prompts/: system_prompt.txt
03-multimodal/src/basic_ai_assistant/: __init__.py  config.py  main.py
03-multimodal/src/basic_ai_assistant/dialog/: dialog_manager.py  models.py
03-multimodal/src/basic_ai_assistant/finance/: category.py  finance_manager.py  ledger.py  transaction.py  transaction_type.py
03-multimodal/src/basic_ai_assistant/llm/: llm_client.py  llm_trace_logger.py  schemas.py
03-multimodal/src/basic_ai_assistant/speech/: __init__.py  audio_converter.py  speech_client.py  speech_server.py
03-multimodal/src/basic_ai_assistant/telegram_bot/: __init__.py  bot_app.py
04-rag-langchain/: env.example  report.md  test_chunk_size.md
04-rag-langchain/docs/: idea.md  (+2 more)
05-monitoring-qa/: .env.example  .gitignore  README.md  pyproject.toml
06-advanced-rag/: .gitignore  README.md  env.example  pyproject.toml  report.md
07-agents-langgraph/: .gitignore  Makefile  README.md  pyproject.toml
08-mcp/: Makefile  env.example  pyproject.toml
(+66 files in other folders)
