[project]
name = "basic-ai-assistant"
version = "0.1.0"
description = "Basic Telegram assistant bot MVP"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0,<4.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "faster-whisper>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]

